phase2/modules/utilities/k8s_yaml/1password_operator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepassword-connect-operator
  namespace: default
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      name: onepassword-connect-operator
  template:
    metadata:
      labels:
        name: onepassword-connect-operator
    spec:
      serviceAccountName: onepassword-connect-operator
      containers:
        - name: onepassword-connect-operator
          image: 1password/onepassword-operator:1.5
          command: ["/manager"]
