phase2/modules/utilities/k8s_yaml/1password_connect.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepassword-connect-sync
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onepassword-connect-sync
  template:
    metadata:
      labels:
        app: onepassword-connect-sync
    spec:
      containers:
        - name: onepassword-connect
          image: 1password/connect-api:1.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: onepassword-volume
            - mountPath: /home/opuser/.op/creds
              name: onepassword-creds-secret-volume
        - name: onepassword-sync
          image: 1password/connect-sync:1.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: onepassword-volume
            - mountPath: /home/opuser/.op/creds
              name: onepassword-creds-secret-volume
      volumes:
        - name: onepassword-volume
          emptyDir: {}
        - name: onepassword-creds-secret-volume
          secret:
            secretName: onepassword
---
apiVersion: v1
kind: Service
metadata:
  name: onepassword-connect-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: onepassword-connect-sync
  ports:
    - port: 8081
      targetPort: 8081
