phase2/modules/utilities/k8s_yaml/nexus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: %NEXUS_IMAGE%
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data-volume
#            - mountPath: /opt/sonatype/nexus/etc/jetty/
#              name: nexus-jetty-volume
#          livenessProbe:
#            httpGet:
#              path: /
#              port: 8081
#              scheme: HTTPS
#            initialDelaySeconds: 10
#            periodSeconds: 600
      volumes:
        - name: nexus-data-volume
          hostPath:
            path: /opt/kubernetes/data/nexus/data
        - name: nexus-secret-certs-volume
          secret:
            secretName: craigmiller160-tls-certs
        - name: nexus-certs-volume
          emptyDir: {}

#        - name: nexus-jetty-volume
#          hostPath:
#            path: /opt/kubernetes/data/nexus/jetty

---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: nexus
  ports:
    - name: standard
      port: 8081
      targetPort: 8081
      nodePort: 30003
      protocol: TCP
    - name: docker-http
      port: 8083
      targetPort: 8083
      nodePort: 30004
      protocol: TCP
