phase2/modules/utilities/k8s_yaml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx-ingress
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-ingress
  rules:
    # TODO change the host
    - host: hello-world.info
      http:
        paths:
          # TODO revamp this for nexus UI vs nexus docker
          - path: /nexus
            pathType: Prefix
            backend:
              service:
                name: nexus-service
                port:
                  number: 8081
